--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -14,21 +14,34 @@ jobs:
     defaults:
       run:
         working-directory: environments/dev
+        shell: bash
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.6.6
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.6
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Create terraform.tfvars
+        run: |
+          cat <<EOF > terraform.tfvars
+          application_name  = "${{ secrets.TFVAR_APPLICATION_NAME }}"
+          environment_name  = "${{ secrets.TFVAR_ENVIRONMENT_NAME }}"
+          primary_location  = "${{ secrets.TFVAR_PRIMARY_LOCATION }}"
+          tags = {
+            owner = "${{ secrets.TFVAR_TAG_OWNER }}"
+            env   = "${{ secrets.TFVAR_TAG_ENV }}"
+          }
+          EOF
 
-    - name: Terraform Validate
-      run: terraform validate
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Plan
-      run: terraform plan -var-file="terraform.tfvars" -input=false
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan -var-file="terraform.tfvars" -input=false
