--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Create terraform.tfvars
         run: |
           cat <<EOF > terraform.tfvars
